nak_1/k8s/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nakadi-deployment
  labels:
    app: nakadi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nakadi
  template:
    metadata:
      labels:
        app: nakadi
    spec:
      volumes:
      - name: postgres
        persistentVolumeClaim:
          claimName: postgres-pv-claim
      - name: zookeeper-1
        persistentVolumeClaim:
          claimName: zookeeper-pv-claim-1
      - name: zookeeper-2
        persistentVolumeClaim:
          claimName: zookeeper-pv-claim-2
      - name: kafka-1
        persistentVolumeClaim:
          claimName: kafka-pv-claim-1
      - name: kafka-2
        persistentVolumeClaim:
          claimName: kafka-pv-claim-2
      containers:
      - name: postgres
        image: roskenet/nakadidb:1.0.0
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres
      - name: zookeeper
        image: zookeeper:3.6
        volumeMounts:
        - mountPath: /data
          name: zookeeper-1
        - mountPath: /datalog
          name: zookeeper-2
      - name: kafka
        image: bitnami/kafka:3.6
        volumeMounts:
        - mountPath: /var/lib/kafka/data
          name: kafka-1
        - mountPath: /etc/kafka/secrets
          name: kafka-2
      - name: nakadi
        image: roskenet/nakadi:1.0.0
