nak_1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nakadi-deployment
  labels:
    app: nakadi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nakadi
  template:
    metadata:
      labels:
        app: nakadi
    spec:
      containers:
      - name: postgres
        image: roskenet/nakadidb:1.0.0
      - name: zookeeper
        image: zookeeper:3.6
      - name: kafka
        image: bitnami/kafka:3.6
      - name: nakadi
        image: roskenet/nakadi:1.0.0
