nak_1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nakadi
spec:
  selector:
    app: nakadi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
