nak_1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nakadi
spec:
  rules:
    - host: "nakadi.192-168-49-2.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nakadi
                port:
                  number: 80
